--- a/Projekt KCK/packages.config
+++ b/Projekt KCK/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net48" />
   <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.NETFramework.ReferenceAssemblies.net48" version="1.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
-  <package id="NStack.Core" version="0.15.0" targetFramework="net48" />
+  <package id="NStack.Core" version="0.16.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="Terminal.Gui" version="0.90.3" targetFramework="net48" />
 </packages>
